--- a/db/ids_config.ini
+++ b/db/ids_config.ini
@@ -34,6 +34,9 @@
     exceptions[]    = GET.__utmz
     exceptions[]    = GET.__utmc
 
+    ; seems to not like the themegen cookie?
+    exceptions[]    = COOKIE.themegen
+
     ; you can use regular expressions for wildcard exceptions - example: /.*foo/i
 
     ; PHPIDS should run with PHP 5.1.2 but this is untested - set 
