--- a/zf2/composer.json
+++ b/zf2/composer.json
@@ -10,6 +10,12 @@
 		"smarty/smarty": "3.1.13",
 		"zetacomponents/base": "1.8",
 		"zetacomponents/webdav": "1.1.3",
+		"zendframework/zend-filter": "2.0.7",
+		"zendframework/zend-mail": "2.0.7",
+		"zendframework/zend-i18n": "2.0.7",
+		"zendframework/zend-mime": "2.0.7",
+		"zendframework/zend-servicemanager": "2.0.7",
+		"zendframework/zend-validator": "2.0.7",
 		"zendframework/zendframework1": "1.12.1"
 	},
 	"require-dev": {
@@ -47,6 +53,7 @@
 			"lib/TikiWebdav/",
 			"lib/rating/formula/",
 			"lib/core/StandardAnalyzer/",
+			"lib/webmail/tikimaillib.php",
 			"vendor/smarty/smarty/distribution/libs/sysplugins/smarty_security.php",
 			"vendor/adodb/adodb/",
 			"vendor/phpcas/phpcas/"
