[MOD] Converting Zend_Search_Lucene to ZendSearch\Lucene, in a cloned repository to avoid version conflicts
git-svn-id: file:///var/local/code.tiki.org/tikisvn/branches/experimental@44861 b456876b-0849-0410-b77d-98878d47e9d5

--- a/zf2/composer.json
+++ b/zf2/composer.json
@@ -16,6 +16,7 @@
 		"zendframework/zend-mime": "2.0.7",
 		"zendframework/zend-servicemanager": "2.0.7",
 		"zendframework/zend-validator": "2.0.7",
+		"lphuberdeau/zendsearch": "dev-master",
 		"zendframework/zendframework1": "1.12.1"
 	},
 	"require-dev": {
@@ -60,6 +61,10 @@
 		]
 	},
 	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/lphuberdeau/ZendSearch"
+		},
 		{
 			"type": "package",
 			"package": {
